<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Restaurant Inspections: Surrey</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="title_activity_restaurant">Restaurant</string>
    <string name="display_formate_criticalnum_non_criticalnum_relative_type_hazardlevel_icon">Display Formate: CriticalNum,Non-CriticalNum,Relative,Type,HazardLevel,Icon</string>
    <string name="coordinates">Coordinates:</string>

    <string name="main_activity_restaurant_name" formatted="true">%1$s</string>
    <string name="main_activity_restaurant_item_last_inspection_date">Last inspection: %1$s</string>
    <string name="main_activity_restaurant_item_last_inspection_date_no_inspection">This restaurant has never had an inspection</string>
    <string name="main_activity_restaurant_item_violations">Violations: %1$s</string>
    <string name="main_activity_restaurant_item_violations_no_inspection" />

    <string name="restaurant_activity_restaurant_name">%1$s</string>
    <string name="restaurant_activity_restaurant_address">Address: %1$s</string>
    <string name="restaurant_activity_restaurant_coords">Coordinates: %1$s</string>
    <string name="restaurant_activity_inspection_item_date">Last Inspection: %1$s</string>
    <string name="restaurant_activity_inspection_item_crit_viols">Critical violations: %1$s</string>
    <string name="restaurant_activity_inspection_item_non_crit_viols">Non-critical violations: %1$s</string>

    <string name="inspection_activity_violation_item_brief_description">%1$s</string>
    <string name="inspection_activity_violation_item_full_description">
        Violation number: %1$s. Critical violation: %2$s. %3$s. Repeat: %4$s.
    </string>
    <string name="inspection_activity_date">Date: %1$s</string>
    <string name="inspection_activity_type">Type: %1$s</string>
    <string name="inspection_activity_critical_violations">Critical violations: %1$s</string>
    <string name="inspection_activity_non_critical_violations">Non-critical violations: %1$s</string>
    <string name="inspection_activity_hazard_rating">Hazard rating: %1$s</string>
    <string name="title_activity_maps">Map</string>
    <string name="ask_user_to_update_message">There is new data to download. Would you like to download it?</string>
    <string name="ask_user_to_update_accept">Yes</string>
    <string name="ask_user_to_update_decline">No</string>
    <string name="please_wait_dialog_message">Please wait while the data is being downloaded. Press cancel if you would like to cancel the download.</string>
    <string name="please_wait_dialog_cancel">Cancel</string>
    <string name="launch_list">Switch to list</string>
    <string name="launch_map">Switch to map</string>
    <string name="no_inspection_data_available">No inspection data available.</string>
    <string name="enter_the_key_word_here">Search restaurants</string>
    <string name="please_enter_some_key_words_to_help_search">please_enter_some_key_words_to_help_search</string>
    <string name="search_by_violation_num">Critical violations in last year</string>
    <string name="search_by_the_hazard_level">Hazard level of last inspection</string>
    <string name="submit_search">Submit search</string>
    <string name="reset_search">Reset search</string>
    <string name="num">Enter an integer</string>
    <string name="please_enter_the_key_word">Enter search parameters</string>
    <string name="click_to_get_favorite_only">Favourite restaurants only?</string>
    <string-array name="HazardlevelStr">
        <item>Any</item>
        <item>Low</item>
        <item>Moderate</item>
        <item>High</item>
    </string-array>

    <string-array name="ViolationNumBound">
        <item>All</item>
        <item>Greater or Equal</item>
        <item>Lesser or Equal</item>
    </string-array>

    <string-array name="ChooseFavor">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string name="type_follow_up">Type: Follow-up</string>
    <string name="Date_place_holder">Jan 22nd 2020</string>
    <string name="critical_violations_5"># Critical Violations: 5</string>
    <string name="non_critical_violations_5"># Non-critical Violations: 5</string>
    <string name="hazard_rating_medium">Hazard Rating: Medium</string>
    <string name="restaurant_name_here">Restaurant Name Here</string>
    <string name="last_inspection">Last Inspection</string>
    <string name="of_violations_here"># of Violations Here</string>

    <string name="n_a">N/A</string>
    <string name="inspection_date_here">Inspection Date Here</string>
    <string name="num_crit_viols">Num crit viols</string>
    <string name="num_noncrit_viols">Num nonCrit viols</string>

    <string name="modified_fav_restaurants_message">
        These are your favourite restaurants which have had new inspections since you last updated.
    </string>
    <string name="modified_fav_ok">OK</string>
    <string name="search">Search</string>


</resources>