<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/favorite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SearchActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search"
        android:layout_width="366dp"
        android:layout_height="88dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="440dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_message"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/enter_the_key_word_here" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="367dp"
        android:layout_height="32dp"
        android:text="@string/please_enter_the_key_word"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.878" />

    <TextView
        android:id="@+id/com1"
        android:layout_width="267dp"
        android:layout_height="30dp"
        android:text="@string/search_by_violation_num"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"
        app:layout_constraintVertical_bias="0.13" />

    <Spinner
        android:id="@+id/ViolationNum"
        android:layout_width="136dp"
        android:layout_height="51dp"
        android:layout_marginBottom="308dp"
        android:background="#20050505"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/com1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/com1" />

    <EditText
        android:id="@+id/count_text_search"
        android:layout_width="139dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/num"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/ViolationNum"
        app:layout_constraintStart_toEndOf="@+id/ViolationNum"
        app:layout_constraintTop_toTopOf="@+id/ViolationNum"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/com2"
        android:layout_width="253dp"
        android:layout_height="26dp"
        android:text="@string/search_by_the_hazard_level"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ViolationNum"
        app:layout_constraintVertical_bias="0.053" />

    <Spinner
        android:id="@+id/Hazardlevel"
        android:layout_width="137dp"
        android:layout_height="46dp"
        android:background="#20050505"
        android:spinnerMode="dropdown"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/com2"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="@+id/com2"
        app:layout_constraintTop_toBottomOf="@+id/com2"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <Spinner
        android:id="@+id/ChooseFavorite"
        android:layout_width="137dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="#D3D2D2"
        app:layout_constraintEnd_toEndOf="@+id/Hazardlevel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Hazardlevel"
        app:layout_constraintTop_toBottomOf="@+id/Hazardlevel" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="150dp"
        android:layout_height="57dp"
        android:text="@string/submit_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Hazardlevel"
        app:layout_constraintVertical_bias="0.586" />

    <Button
        android:id="@+id/btn_clean"
        android:layout_width="169dp"
        android:layout_height="55dp"
        android:text="@string/reset_search"
        app:layout_constraintBottom_toBottomOf="@+id/btn_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_search"
        app:layout_constraintTop_toTopOf="@+id/btn_search" />

    <TextView
        android:id="@+id/favor"
        android:layout_width="238dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:text="@string/click_to_get_favorite_only"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/ChooseFavorite"
        app:layout_constraintStart_toEndOf="@+id/ChooseFavorite"
        app:layout_constraintTop_toTopOf="@+id/ChooseFavorite"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>