<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.RestaurantActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/name_resActivity"
        android:layout_width="88dp"
        android:layout_height="46dp"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/address_resActivity"
        android:layout_width="137dp"
        android:layout_height="51dp"
        android:text="@string/address"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/name_resActivity"
        app:layout_constraintTop_toBottomOf="@+id/name_resActivity"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fix_txt1"
        android:layout_width="154dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toBottomOf="@+id/name_resActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/name_resActivity"
        app:layout_constraintTop_toTopOf="@+id/name_resActivity"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fix_txt2"
        android:layout_width="132dp"
        android:layout_height="39dp"
        android:text="@string/longitude"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/address_resActivity"
        app:layout_constraintTop_toBottomOf="@+id/address_resActivity"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/latLng_resActivity"
        android:layout_width="140dp"
        android:layout_height="36dp"
        android:text="@string/latitude"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/fix_txt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toEndOf="@+id/fix_txt2"
        app:layout_constraintTop_toBottomOf="@+id/fix_txt1"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/restaurant_fix_text"
        android:layout_width="366dp"
        android:layout_height="72dp"
        android:text="@string/display_formate_criticalnum_non_criticalnum_relative_type_hazardlevel_icon"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fix_txt2"
        app:layout_constraintTop_toBottomOf="@+id/fix_txt2"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/restaurant_view"
        android:layout_width="409dp"
        android:layout_height="465dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_fix_text" />
</androidx.constraintlayout.widget.ConstraintLayout>